--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,46 +7,54 @@
         <h3>Alien consigue trabajo con empresario</h3>
 
         <p>En una ciudad suburbana, un hombre de negocios estaba trabajando en su casa cuando fue sorprendido por la
-            presencia de un ser extraterrestre en su jardín trasero.
-        <p>
-            El ser, que parecía ser un extraterrestre humanoide de piel azulada, se acercó al hombre y le hizo señas
+            presencia de un ser extraterrestre en su jardín trasero.</p>
+
+        <p> El ser, que parecía ser un extraterrestre humanoide de piel azulada, se acercó al hombre y le hizo señas
             para que saliera al patio trasero. El hombre, al principio sorprendido y un poco asustado, salió al patio
-            para encontrarse con el extraterrestre.
+            para encontrarse con el extraterrestre. </p>
+
+        <p> El extraterrestre comenzó a comunicarse con el hombre, pero su idioma era desconocido para el hombre. Sin
+            embargo, a través de gestos y señas, el extraterrestre le hizo entender al hombre que estaba buscando
+            trabajo.
         </p>
+        <p>
+            El hombre de negocios, sorprendido por la petición, pero también curioso, decidió escuchar lo que el
+            extraterrestre tenía que decir. El extraterrestre señaló a su nave espacial estacionada cerca de la casa y
+            parecía indicar que estaba interesado en trabajar con tecnología avanzada. </p>
 
-
-        El extraterrestre comenzó a comunicarse con el hombre, pero su idioma era desconocido para el hombre. Sin
-        embargo, a través de gestos y señas, el extraterrestre le hizo entender al hombre que estaba buscando trabajo.
-
-        El hombre de negocios, sorprendido por la petición, pero también curioso, decidió escuchar lo que el
-        extraterrestre tenía que decir. El extraterrestre señaló a su nave espacial estacionada cerca de la casa y
-        parecía indicar que estaba interesado en trabajar con tecnología avanzada.
-
-        A pesar de la barrera del idioma, el hombre de negocios logró entender las habilidades y conocimientos del
-        extraterrestre, y quedó impresionado. Decidió darle una oportunidad al extraterrestre y le ofreció un trabajo en
-        su empresa.
-
-        El extraterrestre se mostró muy agradecido y empezó a trabajar en la empresa, ayudando a mejorar la tecnología y
-        la productividad. Los otros empleados de la empresa estaban asombrados por el ingenio y las habilidades del
-        extraterrestre, pero pronto se acostumbraron a trabajar con él.
-
-        La noticia se difundió rápidamente y pronto, la empresa del hombre de negocios se convirtió en el centro de
-        atención de los medios de comunicación y de la comunidad científica. Todos querían saber más sobre el
-        extraterrestre que había encontrado trabajo en la Tierra.
-
-        A medida que el extraterrestre pasaba más tiempo en la Tierra, comenzó a adaptarse a su nuevo entorno y a
-        aprender más sobre la cultura humana. Después de un tiempo, decidió que era hora de regresar a su planeta de
-        origen, pero no antes de agradecer al hombre de negocios y a sus compañeros de trabajo por la oportunidad y la
-        experiencia única.
-
-        El hombre de negocios se sintió afortunado de haber tenido la oportunidad de trabajar con un ser extraterrestre
-        y se preguntó qué otras maravillas podrían estar esperando en el vasto universo.
+        <p>
+            A pesar de la barrera del idioma, el hombre de negocios logró entender las habilidades y conocimientos del
+            extraterrestre, y quedó impresionado. Decidió darle una oportunidad al extraterrestre y le ofreció un
+            trabajo en
+            su empresa.
+        </p>
+        <p> El extraterrestre se mostró muy agradecido y empezó a trabajar en la empresa, ayudando a mejorar la
+            tecnología y
+            la productividad. Los otros empleados de la empresa estaban asombrados por el ingenio y las habilidades del
+            extraterrestre, pero pronto se acostumbraron a trabajar con él.
+        </p>
+        <p>
+            La noticia se difundió rápidamente y pronto, la empresa del hombre de negocios se convirtió en el centro de
+            atención de los medios de comunicación y de la comunidad científica. Todos querían saber más sobre el
+            extraterrestre que había encontrado trabajo en la Tierra.
+        </p>
+        <p>
+            A medida que el extraterrestre pasaba más tiempo en la Tierra, comenzó a adaptarse a su nuevo entorno y a
+            aprender más sobre la cultura humana. Después de un tiempo, decidió que era hora de regresar a su planeta de
+            origen, pero no antes de agradecer al hombre de negocios y a sus compañeros de trabajo por la oportunidad y
+            la experiencia única.
+        </p>
+        <p>
+            El hombre de negocios se sintió afortunado de haber tenido la oportunidad de trabajar con un ser
+            extraterrestre
+            y se preguntó qué otras maravillas podrían estar esperando en el vasto universo.
         </p>
 </div>
 </section>
-
 <hr>
-
+<h4>
+    Las mejores publicaciones de nuestros usuarios:
+</h4>
 
 <section class="py-5">
 
