--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,10 +12,10 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/views/farandula.hbs">farándula</a>
+          <a class="nav-link" href="/farandula">farándula</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/views/politica.hbs">política</a>
+          <a class="nav-link" href="/politica">política</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/publicar" id="linkPublicar">Publicar</a>
